Wed Jul 20 01:18:06 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

	* Add new httputil object to the bot object, to be used by plugins etc
	that wish to make http requests. It sets up all the proxies etc for them
	according to bot config.

Sat Jul 16 02:23:13 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Apply most of Rene's patch and fix various plugins.
	* New plugin: autoop (auto ops via hostmask)
	* New feature: karmastats

Wed Oct 13 16:16:31 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fix bug with quotes plugin where it gets confused and sees both a quote
  and a keyword, both plugins are triggered by, for example "addquote foo is
  bar"
  * fixed this by implementing the "has_responded" flag on a message. When a
  plugin replied to a message (or it manually sets m.replied to true), the
  keywords plugin will honour that flag and not examine the message for
  keywords. This flag can also be checked by listen plugins that don't want to
  interfere with other plugin commands.

Mon Oct 11 00:37:52 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixes to the NickServ plugin

Sat Oct 09 23:23:24 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * Keyword searching

Fri Oct 08 00:40:07 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * fixed insult plugin
  * fixed excuse plugin

Thu Oct 07 23:28:05 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * searching for urls in the url plugin
  * roshambo (rock/paper/scissors) plugin from Hans Fugal <hans@fugal.net>

Sat Apr 17 20:56:50 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * Oh, found new tv plugin in my inbox from ages ago, but it's still not
  working so I guess it changed again since then
  * New eightball plugin from Daniel Free

Sat Apr 17 20:44:43 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixed the babelfish parser so translate works again.
  * Misc other fixes
  * Note some plugins are broken (excuse,insult) because the server they use
    went away. I don't know of a replacement right now.