@@ -3,7 +3,7 @@ SENDQ_DELAY = 2.0
 SENDQ_BURST = 4
 NICK = rbot
 USER = rbot
-JOIN_CHANNELS = #giblet
+JOIN_CHANNELS = #rbot
 PORT = 6667
 LANGUAGE = english
 KEYWORD_LISTEN = false
