@@ -1,3 +1,9 @@
+Wed Jul 20 23:30:01 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * Move some core plugins to use the new httputil
+	* fix wserver's redirection handling for relative (i.e. broken) redirects
+	* fix tube plugin's html parsing
+
 Wed Jul 20 01:18:06 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>
 
 	* Add new httputil object to the bot object, to be used by plugins etc
